@@ -30,3 +30,4 @@
 20050116 Crypt-Tea_JS-2.10 Move to New version of the Tea algorithm
 20050215 2.11 fixed test.html asciidigest test, fixed EXPORT_OK doc
 20050314 2.12 use bytes in str2binary, with workaround for pre-5.6 perl
+20050323 2.13 utf8 detection and encoding in encrypt, binarydigest and test.pl
